finished responsive Microsoft header

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,101 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TODO: Add document title</title>
-  <!-- TODO: add title -->
+  <title>Microsoft header</title>
   <link rel="stylesheet" href="./styles.scss">
+  <link rel="icon" href="images/icons8-microsoft-48.png">
   <script src="./main.js"></script>
 </head>
 <body>
-  Template
+  <header class="header">
+    <div class="header__group">
+      <div class="header__mobile">
+        <button class="header__mobile-button header__mobile-button--burger"></button>
+        <button class="header__mobile-button header__mobile-button--search"></button>
+      </div>
+      <div class="header__group-small">
+      <img src="./images/microsoft_PNG20.png" class="header__logo" alt="Microsoft logo">
+      <div class="header__decoration"></div>
+      <nav class="header__nav nav">
+        <ul class="nav__list">
+          <li class="nav__item nav__item-biggest">
+            <a href="#" class="nav__link">
+              Surface
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">
+              Computers
+              <button class="nav__button-drop"></button>
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">
+              Computers for Business
+              <button class="nav__button-drop"></button>
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">
+              Accessories
+              <button class="nav__button-drop"></button>
+            </a>
+          </li>
+          <li class="nav__item nav__item--hidden">
+            <a href="#" class="nav__link">
+              Shop now
+              <button class="nav__button-drop"></button>
+            </a>
+          </li>
+          <li class="nav__item nav__item--hidden">
+            <a href="#" class="nav__link">
+              Support
+            </a>
+          </li>
+          <li class="nav__item nav__item--more">
+            <a href="#" class="nav__link">
+              More
+              <button class="nav__button-drop"></button>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+      <div class="header__actions actions">
+        <div class="actions__item actions__item--all">
+          <a class="actions__link--all" href="#">
+            All Microsoft
+          </a>
+          <button class="actions__button actions__button--drop"></button>
+        </div>
+        <div class="actions__item">
+          <a class="actions__link" href="#">
+            Search
+          </a>
+          <button class="actions__button actions__button--search"></button>
+        </div>
+        <div class="actions__item">
+          <a class="actions__link" href="#">
+            Cart
+          </a>
+          <button class="actions__button actions__button--cart"></button>
+        </div>
+        <div class="actions__item">
+          <a class="actions__link actions__link--sign" href="#">
+            Sign in
+          </a>
+          <button class="actions__button actions__button--sign"></button>
+        </div>
+      </div>
+    </div>
+  </header>
+  <section class="mobile">
+    <div class="nav__item nav__item-post">
+      <a href="#" class="nav__link nav__item-biggest">
+        Surface
+        <button class="nav__button-drop"></button>
+      </a>
+    </div>
+  </section>
 </body>
 </html>
